# Generative-Guardian-Project

./: .gitignore  README.md  agg-full.Dockerfile  agg.Dockerfile  api-reference.html  authors.txt  control.Dockerfile  default.conf  docker-compose.dev.yml  docker-compose.yml  install.sh  jwt.txt  openapi.json  openapi_pretty.json  openapi_trimmed.json  prompt_tester.py  pyproject.toml  results.jsonl  test.py
.github/workflows/: apply_new_dist_to_dev.yml  build_aggregator_image.yml  build_control_panel_image.yml  dev_build_aggregator_image.yml  dev_build_control_panel_image.yml
aggregator/: .env.nlp  .gitignore  README.md  alert_watchdog.py  db.py  log.yaml  nlp_prefetch.py  pyproject.toml  requirements.txt  uwsgi.ini  uwsgi_asyncworker.py
aggregator/core/: __init__.py  alert.py  budget.py  client.py  errors.py  langdetect.py  logs.py  mailing.py  modelpool.py  spendresponse.py  state.py  syscheck.py  trf.py  types.py
aggregator/core/policies/: codeprovenance.py  get.py  injections.py  invisibletext.py  languages.py  topics.py
aggregator/core/policies/pii/: __init__.py  anonymization.py  redaction.py  tokenization.py
aggregator/core/policies/pii/recognizers/: nerpattern.py
aggregator/core/providers/: __init__.py  amlscore.py  anthropic.py  azure.py  base.py  bedrock.py  gemini.py  mistral.py  openai.py  openaicompatible.py
aggregator/server/: __init__.py  azureml.py  errors.py  generic.py  oai.py
aggregator/utils/: __init__.py  sha.py
control_panel/: .dockerignore  package-lock.json
control_panel/api/: README.md  docker-entrypoint.sh  log.yaml  main.py  pyproject.toml
control_panel/api/control_panel/: __init__.py  config.py  database.py  enums.py  errors.py  oaipricing.py
control_panel/api/control_panel/dtos/: apikey.py  llm.py  settings.py  user.py
control_panel/api/control_panel/middlewares/: renewjwt.py  tz.py
control_panel/api/control_panel/routes/: __init__.py  account_management.py  alert.py  apikey.py  auth.py  budget.py  cfg.py  codeprov.py  compliance.py  dashboard.py  invisible_text.py  jailbreak.py  llm.py  logs.py  maintenance.py  mocks.py  openapi.py  overview.py  pii.py  policies.py  pool.py  rbac.py  scopes.py  settings.py  sso.py  stats.py  usage.py  utilization.py  weekly_report.py
control_panel/api/control_panel/utils/: __init__.py  auth.py  prefixdict.py  tokengenerator.py
control_panel/api/scheduler/: weekly_report_scheduler.py
control_panel/web/: index.html  package-lock.json  package.json  vite.config.ts
trussed/: __init__.py  amlscore.py  ctx.py  env.py  errors.py  init.py  languages.py  log.yaml  logs.py  openai.py  pydantic.py
trussed/llmtools/: __init__.py  amlscore.py  anthropic.py  azure.py  bedrock.py  common.py  gemini.py  mistral.py  openai.py  openaicompatible.py
trussed/models/: __init__.py  aggregation.py  alert.py  apikey.py  appllm.py  budget.py  budgetctl.py  cfg.py  compliance.py  llm.py  llmbase.py  logrecord.py  mail.py  maintenance.py  pii.py  piibase.py  policies.py  pool.py  rbac.py  systag.py  usage.py  usagestats.py  user.py  weekly_report.py
trussed/spacy/: models.json  models.py  repr.py
trussed/templates/: alert-triggered.html  blank.html  weekly_report.html
trussed/typedef/: amlscore.py  openai.py
trussed/utils/: __init__.py  cache.py  color.py  dict.py  oas.py  (+6 more)
venv_agg/: pyvenv.cfg
venv_control/: pyvenv.cfg
(+222 files in other folders)
