[project]
name = "trussed-core"
requires-python = ">= 3.12"

[tool.poetry]
name = "trussed-core"
version = "0.0.1"
description = ""
authors = ["Arthur <af3.inet@gmail.com>"]
packages = [
    { include = "trussed" },
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "~0.115"
motor = "^3.3.1"
uvicorn = {version = "^0.23.2", extras = ["standard"]}
environs = "^9.5.0"
lmdb = "^1.5.1"
beanie = {git = "https://github.com/Trussed-ai/beanie2.git"}
passlib = "^1.7.4"
pytz = "*"
pyjwt = "^2.10"
python-dateutil = "^2.8.2"
pydantic = {version = "*", extras = ["email"]}
pydantic-extra-types = "^2.1.0"
jinja2 = "^3.1.2"
aiosmtplib = "^3.0.1"

litellm = "^1.52.10"

openai = "^1.54"
boto3 = "^1.34.35"
anthropic = "^0.19.2"
google-generativeai = "^0.4"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
ignore = ["F403", "F405"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true


