[project]
name = "trussed-cp"
requires-python = ">= 3.12"

[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
trussed-core = {path = "../..", develop = true}
python3-saml = "^1.16.0"
python-multipart = "^0.0.20"
jsonref = "^1.1.0"
prometheus-client = "^0.21.1"
python-json-logger = "^2.0.7"
orjson = "^3.10.15"
apscheduler = "^3.11.0"
weasyprint = "^64.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.ruff.lint]
ignore = ["F403", "F405", "F722"]

[tool.ruff.format]
quote-style = "single"

